--- a/buscar.html
+++ b/buscar.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/rating.css">
-  <link rel="icon" type="image/png" href="assets/diet.png">
+  <link rel="icon" type="image/png" href="assets/img/diet.png">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="text/javascript" src="assets/js/index.js" ></script>
   <title>AEC | Las mejores recetas</title>
@@ -20,8 +20,6 @@
 
     .recipes {
       display: grid;
-      grid-auto-flow: dense;
-      grid-auto-rows: 22rem;
       grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
       gap: 1rem;
       padding: 40px;
@@ -32,11 +30,11 @@
   <header style="overflow: hidden; height: 53px;">
       <nav class="demo" class="pseudo button icon-picture">
         <a href="#" class="brand">
-          <img class="logo" src="assets/diet.png" />
+          <img class="logo" src="assets/img/diet.png" />
           <span>AEC</span>
         </a>
         <input id="bmenub" type="checkbox" class="show">
-        <label for="bmenub" class="burger pseudo button"><img src="assets/menu.svg" alt="Menu"/></label>
+        <label for="bmenub" class="burger pseudo button"><i class="fa fa-bars" aria-hidden="true"></i></label>
         <div class="menu">
           <select style="width: 110px;">
             <option>Spanish</option>
@@ -54,61 +52,16 @@
       <label><input type="text" placeholder="Buscar"/></label>
       <button style="border-radius: 5px;"><i class="fa fa-search" aria-hidden="true"></i></button>
     </div>
-    <div class="recipes">
-      <div>
-        <article class="card">
-          <img src="assets/bolognesa.jpg" />
-          <footer>
-            <h3>Spaghetti Bolognesa</h3>
-            <span class="ingredients"></span>
-            <span class="coste"></span>
-            <span class="dificultad"></span>
-            <span class="valoracion"></span>
-          </footer>
-        </article>
-      </div>
-      <div>
-        <article class="card">
-          <img src="assets/bolognesa.jpg" />
-          <footer>
-            <h3>Spaghetti Bolognesa</h3>
-            <span class="ingredients"></span>
-            <span class="coste"></span>
-            <span class="dificultad"></span>
-            <span class="valoracion"></span>
-          </footer>
-        </article>
-      </div>
+    <div id="recipes" class="recipes">
     </div>
   </main>
 </body>
 <script>
-  const costes = document.getElementsByClassName("coste")
-  let i = 0
-  for (const elem of costes) {
-    elem.innerHTML = createIconRating(`coste-${i}`, getRandomRate(), 'eur', true)
-    i++
+  const recs = document.getElementById("recipes")
+  
+  for (const rec of RECIPES) {
+    recs.innerHTML += createRecipeCard(rec)
   }
 
-  const difs = document.getElementsByClassName("dificultad")
-  let j = 0
-  for (const elem of difs) {
-    elem.innerHTML = createIconRating(`dif-${j}`, getRandomRate(), 'fire', true)
-    j++
-  }
-
-  const vals = document.getElementsByClassName("valoracion")
-  let k = 0
-  for (const elem of vals) {
-    elem.innerHTML = createStarRating(`vals-${k}`, getRandomStarRate(), true)
-    k++
-  }
-
-  // const ings = document.getElementsByClassName("ingredients")
-  // let l = 0
-  // for (const elem of vals) {
-  //   elem.innerText = JSON.stringify(pickRandomIngredients())
-  //   l++
-  // }
 </script>
 </html>
