--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-  <link rel="icon" type="image/png" href="assets/diet.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="assets/img/diet.png">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <title>AEC | Las mejores recetas</title>
 </head>
@@ -12,11 +13,11 @@
   <header style="overflow: hidden; height: 53px;">
       <nav class="demo" class="pseudo button icon-picture">
         <a href="#" class="brand">
-          <img class="logo" src="assets/diet.png" />
+          <img class="logo" src="assets/img/diet.png" />
           <span>AEC</span>
         </a>
         <input id="bmenub" type="checkbox" class="show">
-        <label for="bmenub" class="burger pseudo button"><img src="assets/menu.svg" alt="Menu"/></label>
+        <label for="bmenub" class="burger pseudo button"><i class="fa fa-bars" aria-hidden="true"></i></label>
         <div class="menu">
           <select style="width: 110px;">
             <option>Spanish</option>
