Página de publicar completa

--- a/buscar.html
+++ b/buscar.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <header style="overflow: hidden; height: 53px;">
-      <nav class="demo" class="pseudo button icon-picture">
+      <nav class="demo" class="pseudo button">
         <a href="#" class="brand">
           <img class="logo" src="assets/img/diet.png" />
           <span>AEC</span>
@@ -44,15 +44,15 @@
             <option>English</option>
             <option>French</option>
           </select>
-          <a href="buscar.html" class="pseudo button icon-picture">Descubrir</a>
-          <a href="publicar.html" class="button icon-puzzle">Publicar</a>
+          <a href="buscar.html" class="pseudo button">Descubrir</a>
+          <a href="publicar.html" class="pseudo button">Publicar</a>
         </div>
       </nav>
   </header>
   <div style="display: flex;">
     <sidebar id="sidebar" style="flex: 0.2; height: 100%; padding-left: 40px;">
       <h4 class="stack">Filtros</h4>
-      <h6 style="margin: 7px 0;" class="stack">Categoría</h6>
+      <h6 style="margin: 7px 0;" class="stack">Categorías</h6>
       <div id="filroCat"></div>
       <h6 style="margin: 7px 0;" class="stack">Ingredientes</h6>
       <div id="filroIng"></div>
