--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header style="overflow: hidden; height: 53px;">
-      <nav class="demo" class="pseudo button icon-picture">
+      <nav class="demo" class="pseudo button">
         <a href="#" class="brand">
           <img class="logo" src="assets/img/diet.png" />
           <span>AEC</span>
@@ -24,8 +24,8 @@
             <option>English</option>
             <option>French</option>
           </select>
-          <a href="index.html" class="pseudo button icon-picture">Acceder</a>
-          <a href="registro.html" class="button icon-puzzle">Registro</a>
+          <a href="index.html" class="pseudo button">Acceder</a>
+          <a href="registro.html" class="button">Registro</a>
         </div>
       </nav>
   </header>
