Creadas páginas de recetas

--- a/publicar.html
+++ b/publicar.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="assets/js/category.js" ></script>
   <script type="text/javascript" src="assets/js/rating.js" ></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <title>AEC | Las mejores recetas</title>
+  <title>AEC | Publica tu receta</title>
 </head>
 <body>
   <header style="overflow: hidden; height: 53px;">
