--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="assets/img/diet.png">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <title>AEC | Las mejores recetas</title>
+  <title>AEC | Acceso</title>
 </head>
 <body>
   <header style="overflow: hidden; height: 53px;">
