Creación de página de salud y nutrición

--- a/publicar.html
+++ b/publicar.html
@@ -30,6 +30,7 @@
           </select>
           <a href="buscar.html" class="pseudo button">Descubrir</a>
           <a href="publicar.html" class="pseudo button">Publicar</a>
+          <a href="salud.html" class="button">Salud</a>
         </div>
       </nav>
   </header>
